--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -33,7 +33,7 @@
     "enterMin6Chars": "εισάγετε τουλάχιστον 6 χαρακτήρες.",
     "platformAddition" : "προσθήκη πλατφόρμας",
     "platformAdditionHint" : "εισάγετε όνομα πλατφόρμας.",
-    "bookingPlatformAlreadyExists": "η πλατφόρμα ήδη υπάρχει."
+    "entryAlreadyExists": "η εγγραφή ήδη υπάρχει."
 
 
 
