fixed some overflow issues on smaller screen sizes.  + some localizations ( +number of nights inside of reservation container + select all - deselect all buttons, when adding new entries )

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -33,7 +33,13 @@
     "enterMin6Chars": "εισάγετε τουλάχιστον 6 χαρακτήρες.",
     "platformAddition" : "προσθήκη πλατφόρμας",
     "platformAdditionHint" : "εισάγετε όνομα πλατφόρμας.",
-    "entryAlreadyExists": "η εγγραφή ήδη υπάρχει."
+    "entryAlreadyExists": "η εγγραφή ήδη υπάρχει.",
+    "addSelected" : "προσθήκη επιλεγμένων",
+    "selectAll": "επιλογή όλων",
+    "clearSelection" : "καθαρισμός επιλογής"
+
+
+
 
 
 
