added better payout validation and better messages. added a id input field. made UI for dates better. added some localization for validations.

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -36,7 +36,12 @@
     "entryAlreadyExists": "η εγγραφή ήδη υπάρχει.",
     "addSelected" : "προσθήκη επιλεγμένων",
     "selectAll": "επιλογή όλων",
-    "clearSelection" : "καθαρισμός επιλογής"
+    "clearSelection" : "καθαρισμός επιλογής",
+    "format": "μορφή",
+    "invalidFormat" : "μη έγκυρη μορφή",
+    "invalidNumber": "μη έγκυρος αριθμός",
+    "set":"ορισμός"
+
 
 
 
