fixed some localizations. ( set -> setText )

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -40,7 +40,7 @@
     "format": "μορφή",
     "invalidFormat" : "μη έγκυρη μορφή",
     "invalidNumber": "μη έγκυρος αριθμός",
-    "set":"ορισμός"
+    "setText":"ορισμός"
 
 
 
