--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -40,7 +40,10 @@
     "format": "format",
     "invalidFormat" : "invalid format",
     "invalidNumber" : "invalid number",
-    "setText":"set"
+    "setText":"set",
+    "manualAddition" : "manual addition",
+    "submit": "submit"
+
 
 
 
