added some new localizations, made some corrections and also created some "comments"
*** Διήρκησε, Διάρκησε, Διήρκεσε ή Διάρκεσε; No clue

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -1,20 +1,26 @@
 {
     "@@locale": "el",
     "localeFlag": "🇬🇷",
+    "@@homeScreen":{},
     "reservations": "κρατήσεις",
     "declarations": "δηλώσεις",
     "analytics": "αναλυτικά",
     "nights": "νύχτες",
     "night": "νύχτα",
-    "platform": "πλατφόρμα",
     "at": "στο",
+    "@reservationDetails":{},
+    "platform": "πλατφόρμα",
+    "listingPlace": "τοποθεσία",
     "guestName": "όνομα",
     "arrival": "άφιξη",
     "departure": "αναχώρηση",
     "details": "λεπτομέριες",
+    "status": "κατάσταση",
+    "@reservationStatus":{},
     "cancelled": "ακυρώθηκε",
     "upcoming": "αναμένεται",
     "completed": "ολοκληρώθηκε",
+    "@declarationStatus":{},
     "declared": "δηλωμένο",
     "undeclared": "αδήλωτο",
     "lastEdit": "τελευταία αλλαγή",
@@ -27,12 +33,10 @@
     "addFromFile": "εισαγωγή αρχείου",
     "reservation": "κράτηση",
     "found": "βρέθηκαν",
-    "addNewPlatform": "προσθήκη νέας",
+    "add": "προσθέστε",
     "cancel": "ακύρωση",
     "confirm": "επιβεβαίωση",
     "enterMin6Chars": "εισάγετε τουλάχιστον 6 χαρακτήρες.",
-    "platformAddition" : "προσθήκη πλατφόρμας",
-    "platformAdditionHint" : "εισάγετε όνομα πλατφόρμας.",
     "entryAlreadyExists": "η εγγραφή ήδη υπάρχει.",
     "addSelected" : "προσθήκη επιλεγμένων",
     "selectAll": "επιλογή όλων",
@@ -42,6 +46,10 @@
     "invalidNumber": "μη έγκυρος αριθμός",
     "setText":"ορισμός",
     "manualAddition" : "χειροκίνητη προσθήκη",
-    "submit": "υποβολή"
+    "submit": "υποβολή",
+    "enter": "εισάγετε",
+    "reservationLasted" : "η κράτηση διήρκησε"
+
+
 
 }
