added localizations for instructions for importing files

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -56,7 +56,20 @@
     "insertAtleastSix": "εισάγετε τουλάχιστον έξι χαρακτήρες",
     "payout": "πληρωμή",
     "addedAReservation" : "προστέθηκε μια κράτηση",
-    "thePayoutIs": "η πληρωμή είναι"
+    "thePayoutIs": "η πληρωμή είναι",
+    "getTheFiles": "αποκτήστε τα αρχεία",
+    "getTheFilesPrompt" : "για να πάτε στην ιστοσελίδα των κρατήσεων πατήστε στο",
+    "loginIfNeeded": "αν χρειαστεί, συνδεθείτε",
+    "selectTheDatesToImport": "επιλέξτε τις ημερομηνίες που θέλετε να εισάγετε στην εφαρμογή",
+    "clickOnExportLikeBelow": "για να κάνετε λήψη του αρχείου, πατήστε στο κουμπί εξαγωγής όπως στην εικόνα και ύστερα την πρώτη επιλογή",
+    "clickOnDownloadAndWait": "πατήστε λήψη και περιμένετε",
+    "whenReadyDownload":"Όταν το αρχείο σας είναι έτοιμο, κατεβάστε το",
+    "needToConvert": "το αρχείο είναι '.xls' - πρέπει να το μετατρέψουμε σε '.csv'",
+    "goTo": "μετάβαση σε",
+    "convertWithHelp": "μετατρέψτε τα αρχεία με την βοήθεια του",
+    "yourFilesAreReady": "το αρχείο σας είναι έτοιμο για εισαγωγή",
+    "unusedForNonTrailingComma________________________________":""
+
 
 
 
