--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -1,7 +1,7 @@
 {
     "@@locale": "el",
     "localeFlag": "🇬🇷",
-    "@@homeScreen":{},
+    "@homeScreen":{},
     "reservations": "κρατήσεις",
     "declarations": "δηλώσεις",
     "analytics": "αναλυτικά",
