localized the instructions title.

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -68,6 +68,7 @@
     "goTo": "μετάβαση σε",
     "convertWithHelp": "μετατρέψτε τα αρχεία με την βοήθεια του",
     "yourFilesAreReady": "το αρχείο σας είναι έτοιμο για εισαγωγή",
+    "instructionsForFiles": "απόκτηση αρχείων",
     "unusedForNonTrailingComma________________________________":""
 
 
