--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -68,6 +68,7 @@
     "goTo": "get to",
     "convertWithHelp": "convert  the file with the help of",
     "yourFilesAreReady": "your file is ready to be imported",
+    "instructionsForFiles": "getting the files",
     "unusedForNonTrailingComma________________________________":""
 
 
