added a tooltip that warns the user that an entry is about to get overwritten + its FutureBuilder + relative localized text

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -69,6 +69,7 @@
     "convertWithHelp": "μετατρέψτε τα αρχεία με την βοήθεια του",
     "yourFilesAreReady": "το αρχείο σας είναι έτοιμο για εισαγωγή",
     "instructionsForFiles": "απόκτηση αρχείων",
+    "willOverwriteExistingReservation": "θα γίνει μεταβολή μιας ήδη καταχωρημένης κράτησης",
     "unusedForNonTrailingComma________________________________":""
 
 
