--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -69,6 +69,7 @@
     "convertWithHelp": "convert  the file with the help of",
     "yourFilesAreReady": "your file is ready to be imported",
     "instructionsForFiles": "getting the files",
+    "willOverwriteExistingReservation": "will overwrite an already registered reservation",
     "unusedForNonTrailingComma________________________________":""
 
 
