added declaration status localization

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -21,6 +21,7 @@
     "upcoming": "αναμένεται",
     "completed": "ολοκληρώθηκε",
     "@declarationStatus":{},
+    "declaration_status": "κατάσταση δήλωσης",
     "declared": "δηλωμένο",
     "undeclared": "αδήλωτο",
     "lastEdit": "τελευταία αλλαγή",
