--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -50,7 +50,7 @@
     "manualAddition" : "χειροκίνητη προσθήκη",
     "submit": "υποβολή",
     "enter": "εισάγετε",
-    "without": "χωρίς",
+    "other": "άλλο",
     "reservationLasted" : "η κράτηση διήρκησε",
     "insertSomeValue": "εισάγετε κάποια τιμή",
     "selectSomeField": "επιλέξτε κάποιο πεδίο",
