--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -77,6 +77,7 @@
     "thisActionWillPermanentlyDeleteReservation" : "αυτή η ενέργεια θα διαγράψει οριστικά αυτήν την εγγραφή κράτησης από την συσκευή σας",
     "errorNoConnection": "δεν υπάρχει σύνδεση στο διαδίκτυο",
     "errorLoginFailed": "αποτυχία ταυτοποίησης",
+    "errorAlreadyRegistered": "είναι ήδη καταχωρημένο",
     "errorUnknown": "άγνωστο σφάλμα",
     "unusedForNonTrailingComma________________________________":""
 
