--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -78,6 +78,7 @@
     "errorNoConnection": "there is no connection to the internet",
     "errorLoginFailed": "login failed",
     "errorUnknown": "unknown error",
+    "errorAlreadyRegistered": "already registered",
     "unusedForNonTrailingComma________________________________":""
 
 
