some localizations for the declarations page.

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -86,6 +86,9 @@
     "username": "όνομα χρήστη",
     "rememberUsername": "θυμήσου το όνομα χρήστη",
     "loginForm": "φόρμα σύνδεσης",
+    "select": "επιλογή",
+    "noNewEntriesFound": "δεν βρέθηκαν νέες εγγραφές",
+    "synchronizing": "γίνεται συγχρονισμός",
     "unusedForNonTrailingComma________________________________":""
 
 
