added 'users' localization

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -89,6 +89,7 @@
     "select": "επιλογή",
     "noNewEntriesFound": "δεν βρέθηκαν νέες εγγραφές",
     "synchronizing": "γίνεται συγχρονισμός",
+    "users": "χρήστες",
     "unusedForNonTrailingComma________________________________":""
 
 
