--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -89,6 +89,7 @@
     "select": "select",
     "noNewEntriesFound": "no new entries found",
     "synchronizing": "synchronizing",
+    "users": "users",
     "unusedForNonTrailingComma________________________________":""
 
 
