added "property" localized text.

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -90,6 +90,9 @@
     "noNewEntriesFound": "δεν βρέθηκαν νέες εγγραφές",
     "synchronizing": "γίνεται συγχρονισμός",
     "users": "χρήστες",
+    "selectProperty": "επιλογή ακινήτου",
+    "property": "ακίνητο",
+    "properties": "ακίνητα",
     "unusedForNonTrailingComma________________________________":""
 
 
