added dateSelection localization

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -96,6 +96,7 @@
     "property": "ακίνητο",
     "properties": "ακίνητα",
     "noDeclarationsFound": "δεν βρέθηκαν δηλώσεις",
+    "dateSelection":   "επιλογή ημερομηνίων",
     "unusedForNonTrailingComma________________________________":""
 
 
