--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -96,7 +96,7 @@
     "property": "property",
     "properties": "properties",
     "noDeclarationsFound": "no declarations found",
-
+    "dateSelection":   "date selection",
     "unusedForNonTrailingComma________________________________":""
 
 
