--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -120,7 +120,7 @@
     "loading": "loading",
     "importing": "importing",
     "noPendingImports": "no pending imports",
-    "declarationStatusFinalized": "finalized",
+    "declarationStatusFinalized": "declared",
     "declarationStatusTemporary": "temporary",
     "declarationStatusUndeclared": "undeclared",
     "unusedForNonTrailingComma________________________________":""
